add nodes and logs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,10 @@
     </head>
     <body>
         <canvas id="lg"></canvas>
+        <div id="output">
+            <button id="run">Run</button>
+            <button id="clear">Clear logs</button>
+            <div id="logs"></div>
+        </div>
     </body>
 </html>
