--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,9 @@
         <div id="output">
             <button id="run">Run</button>
             <button id="clear">Clear logs</button>
+            <button id="save">Save</button>
+            <button id="load">Load</button>
+            <input id="file" type="file" hidden>
             <div id="logs"></div>
         </div>
     </body>
