--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,5 +17,8 @@
             <input id="file" type="file" hidden>
             <div id="logs"></div>
         </div>
+        <div id="tasks">
+            
+        </div>
     </body>
 </html>
