--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
         <title>overflow</title>
         <script src="/src/script.ts" type="module" defer></script>
         <link href="/style.css" rel="stylesheet">
+        <link href="/favicon.png" rel="icon">
     </head>
     <body>
         <canvas id="lg"></canvas>
