--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
             <button id="save">Save</button>
             <button id="load">Load</button>
             <input id="file" type="file" hidden>
+            <button id="docs">Docs</button>
             <div id="logs"></div>
         </div>
         <div id="tasks">
